scode/Hammes/prob7/error.txt
  File "/var/www/html/scode/Hammes/prob7/main.py", line 7
    int size = ch.length;
        ^^^^
SyntaxError: invalid syntax
